bk_ida/gccida/c2/rtl_for_decl_location
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9241:4: error: expected ';' after expression
rtx v16; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9241:5: error: use of undeclared identifier 'v16'
rtx v16; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9355:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v15] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9357:1: error: use of undeclared identifier 'v16'
v16 = v14->int_cst.rtl; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9358:6: error: use of undeclared identifier 'v16'
if ( v16 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9362:21: error: use of undeclared identifier 'v16'
if ( integer_zerop( v16[6].fld[0].rttree) ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/dwarf2out.c:9364:36: error: use of undeclared identifier 'v16'
if ( !compare_tree_int( *( tree *)&v16[7], v12->string.length - 1LL) ) 
                                   ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtl_for_decl_location/src/obj/dwarf2out.o] Error 1
